--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
 name: Bookfinder
 authors: [b4xter]
-description: Finds a enchanted book stored in current chunk's chests.
+description: Finds a enchanted book stored in current chunk's chests/barrels.
 
 main: dev.coreequip.bookfinder.Bookfinder
-version: 0.2.3
-api-version: 1.14
+version: 0.3.0
+api-version: 1.21
 
 commands:
   findbook:
